src/test/ui/error-codes/E0432.stderr
error[E0432]: unresolved import `something`
  --> $DIR/E0432.rs:1:5
   |
LL | use something::Foo;
   |     ^^^^^^^^^ maybe a missing `extern crate something;`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
